💄 Fix work background color bleeding on "made with" section

--- a/src/style.styl
+++ b/src/style.styl
@@ -490,7 +490,6 @@ main
 	display flex
 	flex-direction column
 	justify-content center
-	margin 0 1rem
 
 for num in 2 3 4 5
 	selector = 'section.contents .row[data-columns="' + num + '"]'
